--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -19,6 +19,53 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type="number"] {
   -moz-appearance: textfield;
+}
+
+/* Header Dropdown */
+
+#userName {
+  cursor: pointer;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: rgb(235, 8, 8);
+  font-size: 20px;
+}
+
+#drop-box {
+  margin-top: 10px;
+  position: absolute;
+  top: 287x;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  border-radius: 1px;
+  padding: 10px 15px;
+  background-color: white;
+  box-shadow: 0 0 6px #94949499;
+}
+
+/* #logout{
+  cursor: pointer;
+  border-top: 1px solid red;
+  margin: 3px 0;
+  font-weight: 700;
+  letter-spacing: 1px;
+  color: rgb(235, 8, 8);
+} */
+
+#user {
+  padding: 7px;
+  /* font-size: 18px; */
+  border-bottom: 1px solid gray;
+  margin-bottom: 5px;
+  text-transform: capitalize;
+}
+
+#btn {
+  margin-top: 3px !important;
+  margin: 1 8px !important;
+  margin-bottom: 3px;
 }
